==============
Changelog
==============
2019-10-02 (version 1.9):
    * includes several smaller updates
    * fixed error 'shortcutVisibleInContextMenu' error that occured with Qt < 5.10

2019-09-19 (version 1.8):
    * updated spectral library module
    * fixed #104: error in case of wrong spatial extent
    * default CRS properly shown in map view settings
    * user-defined CRS visible

2019-08-06 (version 1.7):
    * increased contrast for default map view text
    * improved reading of wavelength information, e.g. from Pleiades, Sentinel-2 and RapidEye data
    * temporal profile plot: data gaps can be shown by breaks in the profile line, data source information is correctly shown for selected points only
    * current extent can be copied via MapCanvas context menu
    * fixed #102: move maps to date of interest selected in a temporal profile plot

2019-07-16 (version 1.6):
    * re-design of map visualization: faster and more compact, the number of maps is fixed to n dates x m map views
    * date, sensor or map view information can be plotted within each map and become available in screenshots
    * releases map layers that are not required any more
    * slider + buttons to navigate over time series
    * fixed preview in crosshair dialog

2019-07-07 (version 1.5):
    * closing the EO Time Series Viewer instance will release all of its resources
    * added "Lock Map Panel" to avoid unwanted resizing of central widget
    * fixed missing updates of time series tree view when adding / removing source images
    * map canvas context menu lists layers with spatial extent intersecting the cursor position only
    * fixes feature selection error
    * added quick label source image to label the path of raster layer

2019-07-02 (version 1.4):
    * adding vector layers with sublayers will add all sublayers
    * map canvas context menu "Focus on Spatial Extent" will hide maps without time series data for the current spatial extent