@@ -364,6 +364,13 @@ ul.auto-toc {
 <h1 class="title">Changelog</h1>
 
 <dl class="docutils">
+<dt>2019-10-02 (version 1.9):</dt>
+<dd><ul class="first last simple">
+<li>includes several smaller updates</li>
+<li>fixed error 'shortcutVisibleInContextMenu' error that occured with Qt &lt; 5.10</li>
+<li>enhanced wavelength extraction from GDAL metadata: wavelength can be specified per band</li>
+</ul>
+</dd>
 <dt>2019-09-19 (version 1.8):</dt>
 <dd><ul class="first last simple">
 <li>updated spectral library module</li>
