@@ -64,6 +64,21 @@ class TestFileFormatLoading(TestCase):
         self.assertEqual(len(files), len(self.TS))
         s = ""
 
+    def test_ForceLevel2(self):
+
+        path = r'J:\diss_bj\level2\s-america\X0050_Y0025\20140601_LEVEL2_LND08_BOA.tif'
+        if os.path.isfile(path):
+
+            self.TS.addSources([path], runAsync=False)
+            self.assertEqual(len(self.TS), 1)
+            
+            tss = self.TS[0][0]
+            self.assertIsInstance(tss, TimeSeriesSource)
+            sensor = self.TS[0].sensor()
+            self.assertIsInstance(sensor, SensorInstrument)
+            self.assertFalse(sensor.wl is None)
+            s = ""
+
     def test_nestedVRTs(self):
         # load VRTs pointing to another VRT pointing to Landsat imagery
         searchDir = DIR_VRT
